<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingLayout"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/cancelButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/cancelButton"
            android:drawableStart="@drawable/title_status"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/settingTitle"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@id/cancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:text="@string/cancelBtn"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/border_line"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ff0000"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintBottom_toTopOf="@id/fragmentLayout">

        <Button
            android:id="@+id/preparingProductBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/settingFrist"
            app:layout_constraintEnd_toStartOf="@+id/paringModeBtn"

            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/paringModeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/settingSecond"
            app:layout_constraintEnd_toStartOf="@+id/searchingProductBtn"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/preparingProductBtn" />

        <Button
            android:id="@+id/searchingProductBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/settingThird"
            app:layout_constraintEnd_toStartOf="@+id/confirmConnectionBtn"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/paringModeBtn" />

        <Button
            android:id="@+id/confirmConnectionBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/settingFourth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/searchingProductBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="8"
        app:layout_constraintTop_toBottomOf="@id/settingLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>