<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemLayout"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/checkTimeText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/mainCheckHour"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/bloodPressureLayout"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bloodPressureLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toEndOf="@id/checkTimeText"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bloodPressureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodPressure"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/bloodPressureValue"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bloodPressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="140/92 mmHg"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purseLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@id/checkTimeText"
        app:layout_constraintTop_toBottomOf="@id/bloodPressureLayout">

        <TextView
            android:id="@+id/purseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purse"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/purseValue"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/purseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="99 bpm"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>