<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/resultLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/title_status"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@string/mainTitle"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@id/mainResultButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mainResultButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/mainResultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/gettingResultBtn"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/settingButton" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:text="@string/settingBtn"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@drawable/border_line"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintVertical_weight="9">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultRecyclerView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightView"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rightView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="6"
            app:layout_constraintStart_toEndOf="@id/resultRecyclerView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/averageValue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintBottom_toTopOf="@id/graph"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/averageTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/valueLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="2">

                    <TextView
                        android:id="@+id/avgText"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:text="@string/mainAvgTitle"
                        android:textSize="20sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/pressureIndexBtn"
                        app:layout_constraintBottom_toBottomOf="@id/pressureIndexBtn"
                        app:layout_constraintEnd_toStartOf="@id/pressureIndexBtn"
                        app:layout_constraintHorizontal_weight="7"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/pressureIndexBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/bloodPressure"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toEndOf="@id/avgText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/valueLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintBottom_toTopOf="@id/resultText"
                    app:layout_constraintTop_toBottomOf="@id/averageTitleLayout"
                    app:layout_constraintVertical_weight="6">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/bloodPressureResultLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toStartOf="@id/purseResultLayout"
                        app:layout_constraintHorizontal_weight="5"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/purseResultText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="혈압"
                            android:textSize="30sp"
                            android:textColor="#FF5D8C64"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/purseValueText"/>

                        <TextView
                            android:id="@+id/purseValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="146/100 mmHg"
                            android:textSize="40sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/purseResultText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>



                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/purseResultLayout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="4"
                        app:layout_constraintStart_toEndOf="@id/bloodPressureResultLayout">

                        <TextView
                            android:id="@+id/bloodPressureResultText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="맥박"
                            android:textSize="30sp"
                            android:textColor="#FF5D8C64"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@id/bloodPressureValueText"/>

                        <TextView
                            android:id="@+id/bloodPressureValueText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="90 bpm"
                            android:textSize="40sp"
                            app:layout_constraintHorizontal_bias="0.3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/bloodPressureResultText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/mainBloodPressureResult"
                    android:textSize="30sp"
                    app:layout_constraintHorizontal_bias="0.22"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/valueLayout"
                    app:layout_constraintVertical_weight="2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintVertical_weight="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageValue">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/graphButtonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintVertical_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/graphLayout">

                    <Button
                        android:id="@+id/weekBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="경향분석(주)"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/monthBtn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/monthBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="경향분석(월)"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/weekBtn"
                        app:layout_constraintEnd_toStartOf="@id/year"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/year"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="경향분석(년)"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@id/monthBtn"
                        app:layout_constraintTop_toTopOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/graphLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/graphButtonLayout"
                    app:layout_constraintVertical_weight="8">

                    <FrameLayout
                        android:id="@+id/graphFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>